# godemo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: abuse-controls-v1.md  deployment.md  gateway_deployment.md  protocol-v1.md
examples/python/: expose_example.py  expose_fastapi.py  simple_http_app.py
gateway/: gaps_test.go  go.mod  handlers.go  helpers.go  helpers_test.go  main.go  main_test.go  security_test.go  session.go
sdk/go/: go.mod  http_forward.go  integration_test.go  main.go  protocol.go  tunnel.go  tunnel_test.go  ws_forward.go
sdk/python/: README.md  pyproject.toml
sdk/python/src/demoit/: __init__.py  __main__.py  client.py
sdk/python/src/godemo/: __init__.py  __main__.py  client.py
sdk/python/tests/: test_client.py  test_integration.py
