[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demoit"
version = "0.1.0"
description = "Expose local HTTP/WebSocket services via Demoit gateway."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "websockets>=12.0"
]

[project.optional-dependencies]
asgi = ["uvicorn>=0.29.0"]
wsgi = ["werkzeug>=3.0.0"]

[project.scripts]
demoit = "demoit:run_cli"

[tool.setuptools.packages.find]
where = ["src"]
